Jira integration & podp***dalacz

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+JIRA_HOST="https://jira.upaid.pl"
+JIRA_USER=""
+JIRA_PASS=""
