--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "hipchat/hipchat-php": "1.4"
+        "hipchat/hipchat-php": "1.4",
+        "lesstif/php-jira-rest-client": "^1.7.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
+        "guzzlehttp/guzzle": "~6.0",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
